--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     padding: 30px 4%;
-    max-width: 1000px;
+    max-width: 1100px;
     margin: 0 auto;
 }
 
@@ -14,7 +14,7 @@
     width: 30px;
     cursor: pointer;
 }
-
+ 
 .footer ul {
     display: grid;
     grid-template-columns: auto auto auto auto;
@@ -26,5 +26,18 @@
 .copyright-text {
     color: gray;
     font-size: 14px;
-    text-align: center;
+    /* text-align: center; */
+}
+
+
+
+@media (max-width: 800px) {
+    .footer-icon img {
+        width: 25px;
+    }
+    .footer ul {
+        grid-template-columns: auto auto;
+        gap: 8px;
+        font-size: 14px;
+    }
 }
