--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -5,7 +5,8 @@
 .banner-img {
     width: 100%;
     mask-image: linear-gradient(to right, transparent, black 75%);
-    -webkit-mask-image: linear-gradient(to right, transparent, black 75%);
+    -webkit-mask-image: linear-gradient(to right, to top, transparent, black 35%);
+
 }
 
 .hero-caption {
@@ -13,13 +14,13 @@
     width: 100%;
     padding-left: 6%;
     bottom: 0px;
-    /* border: 1px solid orange; */
+   
 }
 
 .caption-img {
     width: 90%;
     max-width: 420px;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
 }
 
 .hero-caption p {
@@ -66,4 +67,48 @@
 
 .more-cards {
     padding-left: 6%;
+}
+
+
+@media (max-width: 1024px) {
+    .hero-caption .title-cards {
+        display: none;
+    }
+    .hero-btns {
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width: 800px) {
+    .hero-caption {
+        padding-left: 4%;
+    }
+    .caption-img{
+        margin-bottom: 10px;
+        width: 40%;
+    }
+    .hero-caption p{
+        font-size: 12px;
+        margin-bottom: 10px;
+    }
+    .hero-btns .btn img {
+        width: 20px;
+    }
+    .more-cards{
+        padding-left: 4%;
+    }
+}
+
+@media (max-width: 500px) {
+    .caption-img {
+        display: none;
+    }
+    .hero-btns .btn img {
+        width: 15px;
+    }
+    .hero-btns .btn {
+        padding: 4px 10px;
+        gap: 5px;
+        font-size: 10px;
+    }
 }
